blog part added

--- a/index.html
+++ b/index.html
@@ -57,8 +57,14 @@
                         </a>
                     </li>
                     <li class="nav__item">
-                        <a href="assets/pdf/Ismail Bhuiyan Resume.pdf" target="_blank" class="nav__link">
-                            <i class="uil uil-message nav__icon"></i>Download Resume
+                        <a href="blog.html" class="nav__link">
+                            <i class="uil uil-message nav__icon"></i> Blog
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="https://drive.google.com/file/d/1IUrtxoeSbAtcGf4mmuvzSFUUHF2NlzRm/view?usp=sharing"
+                            target="_blank" class="nav__link">
+                            <i class="uil uil-message nav__icon"></i>Resume
                         </a>
                     </li>
                 </ul>
@@ -168,7 +174,9 @@
                     </div>
 
                     <div class="about__buttons">
-                        <a download="" href="assets/pdf/Ismail Bhuiyan Resume.pdf" class="button button--flex">
+                        <a download=""
+                            href="https://drive.google.com/file/d/1IUrtxoeSbAtcGf4mmuvzSFUUHF2NlzRm/view?usp=sharing"
+                            class="button button--flex">
                             Download Resume <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
@@ -912,10 +920,16 @@
                         <a href="#about" class="footer__link">About</a>
                     </li>
                     <li>
+                        <a href="#skills" class="footer__link">Skills</a>
+                    </li>
+                    <li>
                         <a href="#portfolio" class="footer__link">Project</a>
                     </li>
                     <li>
                         <a href="#contact" class="footer__link">Contact me</a>
+                    </li>
+                    <li>
+                        <a href="blog.html" class="footer__link">Blog</a>
                     </li>
                 </ul>
 
@@ -935,7 +949,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; Ismail Bhuiyan. All right reserved</p>
+            <p class="footer__copy">&#169; Ismail Bhuiyan. All right reserved 2022</p>
         </div>
     </footer>
 
